# mint

./: .clang-format  CMakeLists.txt  LICENSE  README.md  Taskfile.yml
example/: CMakeLists.txt  advanced.c  barebones.c  main.c  simple.c
src/: mint.c  mint.h
